--- a/360FloatWindowDemo/app/build.gradle
+++ b/360FloatWindowDemo/app/build.gradle
@@ -1,24 +1,55 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "24.0.3"
-
+    compileSdkVersion 26
     defaultConfig {
-        applicationId "com.demo.floatwindowdemo"
-        minSdkVersion 14
-        targetSdkVersion 15
+        applicationId "dongzhong.testforfloatingwindow"
+        minSdkVersion 24
+//        targetSdkVersion 26
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:23.2.1'
-    compile 'com.android.support:appcompat-v7:23.2.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support:gridlayout-v7:26.1.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+
+
+//apply plugin: 'com.android.application'
+//
+//android {
+//    compileSdkVersion 23
+//    buildToolsVersion "24.0.3"
+//
+//    defaultConfig {
+//        applicationId "com.demo.floatwindowdemo"
+//        minSdkVersion 14
+////        targetSdkVersion 15
+//    }
+//
+//    buildTypes {
+//        release {
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+//        }
+//    }
+//}
+//
+//dependencies {
+//    compile 'com.android.support:support-v4:23.2.1'
+//    compile 'com.android.support:appcompat-v7:23.2.1'
+//}
