--- a/360FloatWindowDemo/build.gradle
+++ b/360FloatWindowDemo/build.gradle
@@ -1,15 +1,48 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
+
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath 'com.android.tools.build:gradle:7.1.2'
+//        Minimum supported Gradle version is 7.2. Current version is 4.8.
+
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
+//
+//
+//buildscript {
+//    repositories {
+//        google()
+//        jcenter()
+//    }
+//    dependencies {
+//        classpath 'com.android.tools.build:gradle:7.4.0'
+//    }
+//}
+//
+//allprojects {
+//    repositories {
+//        google()
+//        jcenter()
+//    }
+//}
